# naic-bench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile.habana  Dockerfile.nvidia  Dockerfile.rocm  Dockerfile.xpu  README.md  docker2singularity.sh  pyproject.toml
docker/: Dockerfile.nvidia  Dockerfile.nvidia-volta  Dockerfile.rocm  Dockerfile.xpu
lambdal/: README.md  gen-data.py  prepare-slurm-monitor.sh  prepare.sh  run.sh
lambdal/benchmarks.d/: lambdal.sh  simple-inference.sh
slurm/ex3/: naic-bench.sh  naic-bench.template.sh
src/naic_bench/: __init__.py  benchmark.py  config.py  docker.py  package_manager.py  prepare.py  run.py  settings.py  singularity.py  spec.py  utils.py
src/naic_bench/cli/: base.py  docker.py  main.py  prepare.py  report.py  run.py  show.py  singularity.py
src/naic_bench/resources/conf.d/: bert.prepare  bert_base_squad.yaml  bert_large_squad.yaml  gnmt.prepare  gnmt.yaml  ncf.prepare  ncf.yaml  object_detection.prepare  ssd.yaml  tacotron.prepare  tacotron.yaml  transformer.prepare  transformerxl_base.yaml  transformerxl_large.yaml
src/naic_bench/resources/docker/: Dockerfile.cpu  Dockerfile.habana  Dockerfile.nvidia  Dockerfile.rocm  Dockerfile.xpu
src/naic_bench/resources/slurm/ex3/: naic-bench.template.sh
src/naic_bench/utils/: __init__.py  command.py  gpus.py
tests/naic_bench/: conftest.py  test_docker.py  test_package_manager.py  test_spec.py
tests/naic_bench/data/conf.d/: a.yaml
tests/naic_bench/utils/: test_command.py
