[build-system]
requires = ["setuptools >= 61.0.0",
    "build",
    "sphinx"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "naic-bench"
dynamic = ["version"]
description = "An AI-workload focused benchmark collection"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["benchmark", "ai", "multi-gpu", "heterogeneous"]
authors = [
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]
requires-python = ">=3.10"

maintainers = [
    { name = "Thomas Roehr", email = "roehr@simula.no" }
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Lanugage :: Python :: 3.10",
    "Programming Lanugage :: Python :: 3.11",
    "Programming Lanugage :: Python :: 3.12",
]

dependencies = [
    "docker",
    "GitPython",
    "numpy",
    "pandas",
    "psutil",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
    "rich",
    "rich-argparse",
    "slurm-monitor @ git+https://github.com/2maz/slurm-monitor.git",
    "dllogger @ git+https://github.com/NVIDIA/dllogger@v1.1.0#egg=dllogger"
]

[project.urls]
homepage = "https://github.com/2maz/naic-bench"
documentation = "https://2maz.github.io/naic-bench"
repository = "https://github.com/2maz/naic-bench"

[project.optional-dependencies]

dev = [
    "isort",
    "jupyter-book",
    "pre-commit",
    "rich",
    "ruff",
    "sphinx-autoapi",
    "tox"
]

test = [
    "coverage",
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-console-scripts",
    "pytest-cov",
    "pytest-mock",
    "pydot",
    "tox"
]


[project.scripts]
naic-bench = "naic_bench.cli.main:run"
naic-bench-docker = "naic_bench.cli.docker:run"

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools.package-data]
"naic_bench" = [ "resources/**/*" ]

[tool.setuptools.dynamic]
version = { attr = "naic_bench.__version__" }

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 120

[tool.isort]
multi_line_output = 8

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.per-file-ignores]
"conftest.py" = ["E501"]
"test_gpu.py" = ["E501"]
